--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.4.10",
+    "humps": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-svg-spinners": "^0.3.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
