--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "noImplicitAny": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
