--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,14 @@
 {
   "extends": ["airbnb", "airbnb-typescript", "next/core-web-vitals", "prettier"],
   "rules": {
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "variable",
+        "format": ["camelCase", "PascalCase", "UPPER_CASE"],
+        "leadingUnderscore": "allow"
+      }
+    ],
     "import/prefer-default-export": "off",
     "import/extensions": [
       "warn",
@@ -27,6 +35,7 @@
         ]
       }
     ],
-    "no-else-return": "off"
+    "no-else-return": "off",
+    "react/button-has-type": "off"
   }
 }
