--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "leadingUnderscore": "allow"
       }
     ],
+    "@typescript-eslint/no-use-before-define": "off",
     "import/prefer-default-export": "off",
     "import/extensions": [
       "warn",
