--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,14 @@
       }
     ],
     "no-else-return": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": ["function-declaration", "arrow-function"],
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "react/jsx-props-no-spreading": "off"
   }
 }
