gh action to migrate db on merge

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "13.4.10",
     "postcss": "8.4.26",
+    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -44,7 +45,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "3.0.0",
-    "prisma": "^5.2.0"
+    "prettier": "3.0.0"
   }
 }
