--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@prisma/client": "5.2.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -20,6 +21,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.4.13",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
     "humps": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "next": "13.4.13",
@@ -27,12 +36,15 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-filepond": "^7.1.2",
+    "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
