--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "crypto-random-string": "^5.0.0",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.4.13",
     "filepond": "^4.30.4",
@@ -42,6 +43,7 @@
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
+    "slug": "^8.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.1"
