--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
+    "react-tooltip": "^5.21.5",
     "slug": "^8.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
