--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@headlessui/react": "^1.7.16",
     "@prisma/client": "5.2.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
