--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "crypto-random-string": "^5.0.0",
+    "dayjs": "^1.11.10",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.4.13",
     "filepond": "^4.30.4",
