--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:migrate:dev": "prisma migrate dev"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
