--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "8.4.26",
     "prisma": "^5.2.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.46.1",
