--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@headlessui/react": "^1.7.16",
+    "@leeoniya/ufuzzy": "^1.0.11",
     "@prisma/client": "5.2.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/storage-js": "^2.5.4",
