--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     ],
     "import/no-extraneous-dependencies": "off",
     "no-else-return": "off",
+    "no-nested-ternary": "off",
     "no-param-reassign": ["error", { "props": false }],
     "no-underscore-dangle": "off",
     "react/button-has-type": "off",
@@ -53,6 +54,7 @@
         "unnamedComponents": "arrow-function"
       }
     ],
+    "react/jsx-no-bind": "off",
     "react/jsx-props-no-spreading": "off",
     "react/no-unescaped-entities": "off",
     "react/require-default-props": "off"
