--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
     "no-nested-ternary": "off",
     "no-param-reassign": ["error", { "props": false }],
     "no-underscore-dangle": "off",
+    "prefer-destructuring": ["error", { "object": true, "array": false }],
     "react/button-has-type": "off",
     "react/function-component-definition": [
       2,
