--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-markdown": "^9.0.1",
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
     "react-tooltip": "^5.21.5",
+    "remark-linkify-regex": "^1.2.1",
     "slug": "^8.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
