--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.32.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
