--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.16",
     "@leeoniya/ufuzzy": "^1.0.11",
     "@prisma/client": "5.2.0",
+    "@sentry/nextjs": "^7.88.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.32.0",
