--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "8.4.26",
     "postinstall-postinstall": "^2.1.0",
     "prisma": "^5.2.0",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
