--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
     ],
     "react/jsx-no-bind": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/no-danger": "off",
     "react/no-unescaped-entities": "off",
     "react/require-default-props": "off"
   }
