--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "10.4.14",
     "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "eslint": "^8.2.0",
     "eslint-config-next": "13.4.13",
     "filepond": "^4.30.4",
@@ -74,6 +75,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "3.0.0"
+    "prettier": "3.0.0",
+    "ts-node": "^10.9.2"
   }
 }
