Get custom avatar upload and crop working

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.0.4",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
