--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
       }
     ],
     "import/no-extraneous-dependencies": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "no-await-in-loop": "off",
     "no-else-return": "off",
     "no-inner-declarations": "off",
