--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "path": "/api/books/process_cover_images",
       "schedule": "0 * * * *"
     }
-  ]
+  ],
+  "functions": {
+    "app/api/**/route.ts": {
+      "maxDuration": 300
+    }
+  }
 }
