--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     ],
     "baseUrl": "src",
     "noImplicitAny": false,
-    "types": ["jest"]
+    "types": ["jest", "@quramy/jest-prisma"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
