--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^9.0.1",
+    "react-mentions": "^4.4.10",
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
     "react-tooltip": "^5.21.5",
