--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-modern-drawer": "^1.2.2",
     "react-svg-spinners": "^0.3.1",
     "react-tooltip": "^5.21.5",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "remark-linkify-regex": "^1.2.1",
     "slug": "^8.2.3",
     "tailwindcss": "3.3.3",
