--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-linkify-regex": "^1.2.1",
+    "sharp": "0.32.6",
     "slug": "^8.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
