--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -32,10 +32,10 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "eslint": "^8.2.0",
-    "eslint-config-next": "13.4.13",
+    "eslint-config-next": "14.1.0",
     "humps": "^2.0.1",
     "lodash.debounce": "^4.0.8",
-    "next": "13.4.16",
+    "next": "14.1.0",
     "postcss": "8.4.26",
     "postinstall-postinstall": "^2.1.0",
     "prisma": "^5.2.0",
