--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:migrate:dev": "prisma migrate dev"
   },
   "dependencies": {
+    "@atproto/api": "^0.9.8",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
