--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@quramy/jest-prisma": "^1.7.3",
+    "@quramy/jest-prisma-node": "^1.7.3",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
@@ -82,6 +82,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-test-api-route-handler": "^4.0.3",
     "prettier": "3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2"
