--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui-float/react": "^0.13.2",
     "@headlessui/react": "^1.7.16",
     "@leeoniya/ufuzzy": "^1.0.11",
     "@prisma/client": "5.2.0",
