--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "canvas-confetti": "^1.9.2",
     "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
