--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "lodash.debounce": "^4.0.8",
     "next": "14.1.0",
     "open-graph-scraper": "^6.4.0",
+    "pino": "^9.1.0",
+    "pino-logflare": "^0.4.2",
     "postcss": "8.4.26",
     "postinstall-postinstall": "^2.1.0",
     "prisma": "^5.2.0",
