--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "10.4.14",
     "canvas-confetti": "^1.9.2",
     "crypto-random-string": "^5.0.0",
+    "csv-parser": "^3.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "eslint": "^8.2.0",
